--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp server.js dist/server.js || echo 'Убедитесь, что сервер скопирован'",
-    "start": "node server.js",
-    "server": "tsx server.ts"
+    "build": "vite build",
+    "start": "node server.js"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.294.0",
     "recharts": "^2.10.3",
-    "@google/genai": "^0.1.0",
+    "@google/genai": "^1.34.0",
     "express": "^4.18.2",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.1.0"
@@ -26,7 +25,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
-    "tailwindcss": "^3.4.0",
-    "tsx": "^4.7.0"
+    "tailwindcss": "^3.4.0"
   }
 }
